# opencamera-omt

./: .gitignore  LOGBOOK.md  README.md  deploy.ps1  local.properties.example  logcat.ps1
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  OMTBridge.cpp
app/src/main/java/net/sourceforge/opencamera/: MainActivity.java  MyApplicationInterface.java  MyDebug.java  OMTSender.java  OMTStreamingManager.java  PreferenceKeys.java  PreferenceSubVideo.java
app/src/main/java/net/sourceforge/opencamera/cameracontroller/: CameraController.java  CameraController2.java
app/src/main/java/net/sourceforge/opencamera/preview/: Preview.java
app/src/main/java/net/sourceforge/opencamera/ui/: MainUI.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: arrays.xml  strings.xml
app/src/main/res/xml/: preferences_sub_video.xml
libomt/: LICENSE.txt  README.md  libomt.csproj  libomt.h  libomt.sln  notes.md
libomt/cpp/: OMTAsyncPool.cpp  OMTAsyncPool.h  OMTChannel.cpp  OMTChannel.h  OMTConstants.h  OMTDiscovery.cpp  OMTDiscovery.h  OMTProtocol.h  OMTSender.cpp  OMTSender.h  libomt_android.cpp
libomt/src/: BaseInstance.cs  DiscoveryInstance.cs  InstanceHelper.cs  ReceiveInstance.cs  SendInstance.cs  libomt.cs
libomt/stub/: libomt_android.cpp  libomt_stub.cpp
libvmx/: LICENSE.txt  README.md  VMXCodec.vcxproj  VMXCodec.vcxproj.filters  exports.def  libvmx.rc  libvmx.sln  resource.h
libvmx/src/: framework.h  resource.h  thread_tasks.h  vmxcodec.cpp  vmxcodec.h  vmxcodec_arm.cpp  vmxcodec_arm.h  vmxcodec_avx2.cpp  vmxcodec_avx2.h  vmxcodec_common.h  vmxcodec_x86.cpp  vmxcodec_x86.h
